@@ -13,13 +13,15 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
-run {
-    // Set this to true to see JavaFX output in the console
-    systemProperty "java.util.logging.SimpleFormatter.format", "%1\$tF %1\$tT %4\$s %2\$s %5\$s%6\$s%n"
-}
-
 application {
-    mainClass = 'com.smartbank.SmartBankApp'
+    // Support for alternate main classes using -PmainClass=some.package.ClassName
+    mainClass = project.hasProperty('mainClass') ? project.getProperty('mainClass') : 'com.smartbank.SmartBankApp'
+    
+    // Add native access for JavaFX and SQLite
+    applicationDefaultJvmArgs = [
+        '--enable-native-access=javafx.graphics',
+        '--enable-native-access=ALL-UNNAMED'
+    ]
 }
 
 sourceSets {
@@ -34,13 +36,26 @@ sourceSets {
 }
 
 dependencies {
-    // Add any additional dependencies here
+    implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
+    
+    // JPA / Hibernate dependencies
+    implementation 'org.hibernate:hibernate-core:5.6.15.Final'
+    implementation 'org.hibernate:hibernate-entitymanager:5.6.15.Final'
+    implementation 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final'
+    
+    // SQLite dialect for Hibernate
+    implementation 'com.github.gwenn:sqlite-dialect:0.1.0'
+    
+    // Jakarta Persistence API
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    
+    // BCrypt for secure password hashing
+    implementation 'org.mindrot:jbcrypt:0.4'
+    
+    // SLF4J implementation
+    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'org.slf4j:slf4j-simple:1.7.36'
 }
 
 sourceCompatibility = 11
 targetCompatibility = 11
-
-run {
-    // Set this to true to see JavaFX output in the console
-    systemProperty "java.util.logging.SimpleFormatter.format", "%1\$tF %1\$tT %4\$s %2\$s %5\$s%6\$s%n"
-}
